// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable allowfullscreen with value 'true' 1`] = `
[
  "allowfullscreen",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable async with value 'true' 1`] = `
[
  "async",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable autofocus with value 'true' 1`] = `
[
  "autofocus",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable autoplay with value 'true' 1`] = `
[
  "autoplay",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable checked with value 'true' 1`] = `
[
  "checked",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable controls with value 'true' 1`] = `
[
  "controls",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable default with value 'true' 1`] = `
[
  "default",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable defer with value 'true' 1`] = `
[
  "defer",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable disabled with value 'true' 1`] = `
[
  "disabled",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable formnovalidate with value 'true' 1`] = `
[
  "formnovalidate",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable hidden with value 'true' 1`] = `
[
  "hidden",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable ismap with value 'true' 1`] = `
[
  "ismap",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable itemscope with value 'true' 1`] = `
[
  "itemscope",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable loop with value 'true' 1`] = `
[
  "loop",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable multiple with value 'true' 1`] = `
[
  "multiple",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable muted with value 'true' 1`] = `
[
  "muted",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable nomodule with value 'true' 1`] = `
[
  "nomodule",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable novalidate with value 'true' 1`] = `
[
  "novalidate",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable open with value 'true' 1`] = `
[
  "open",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable playsinline with value 'true' 1`] = `
[
  "playsinline",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable readonly with value 'true' 1`] = `
[
  "readonly",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable required with value 'true' 1`] = `
[
  "required",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable reversed with value 'true' 1`] = `
[
  "reversed",
  true,
]
`;

exports[`HTML_BOOLEAN_ATTRIBUTES should contain immutable selected with value 'true' 1`] = `
[
  "selected",
  true,
]
`;

exports[`HTML_RAW_TEXT_ELEMENTS should contain immutable script with value 'true' 1`] = `
[
  "script",
  false,
]
`;

exports[`HTML_RAW_TEXT_ELEMENTS should contain immutable style with value 'true' 1`] = `
[
  "style",
  false,
]
`;

exports[`HTML_RAW_TEXT_ELEMENTS should contain immutable textarea with value 'true' 1`] = `
[
  "textarea",
  true,
]
`;

exports[`HTML_RAW_TEXT_ELEMENTS should contain immutable title with value 'true' 1`] = `
[
  "title",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable area with value 'true' 1`] = `
[
  "area",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable base with value 'true' 1`] = `
[
  "base",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable br with value 'true' 1`] = `
[
  "br",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable col with value 'true' 1`] = `
[
  "col",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable embed with value 'true' 1`] = `
[
  "embed",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable hr with value 'true' 1`] = `
[
  "hr",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable img with value 'true' 1`] = `
[
  "img",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable input with value 'true' 1`] = `
[
  "input",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable link with value 'true' 1`] = `
[
  "link",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable meta with value 'true' 1`] = `
[
  "meta",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable param with value 'true' 1`] = `
[
  "param",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable source with value 'true' 1`] = `
[
  "source",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable track with value 'true' 1`] = `
[
  "track",
  true,
]
`;

exports[`HTML_VOID_ELEMENTS should contain immutable wbr with value 'true' 1`] = `
[
  "wbr",
  true,
]
`;
